<resources>
    <string name="app_name">Kompania</string>
    <string name="api_base_path">https://komp-prod.azurewebsites.net</string>
    <string name="title_timetable">Plan zajęć</string>
    <string name="title_messages">Wiadomości</string>
    <string name="title_error_occurred">Wystąpił błąd</string>
    <string name="title_learning_materials">Materiały</string>
    <string name="title_register">Zarejestruj</string>
    <string name="title_registration">Rejestracja</string>
    <string name="title_registration_has_account">Posiadasz konto?</string>
    <string name="title_registration_login">Zaloguj</string>
    <string name="title_registration_firstName">Imię</string>
    <string name="title_registration_surname">Nazwisko</string>
    <string name="title_registration_companyNumber">Numer kompanii</string>
    <string name="title_registration_platoonNumber">Numer plutonu</string>
    <string name="title_registration_password">Hasło</string>
    <string name="title_registration_passwordRepeat">Powtórz hasło</string>
    <string name="title_registration_firstNameEmpty">Wpisz imię</string>
    <string name="title_registration_surnameEmpty">Wpisz nazwisko</string>
    <string name="title_registration_companyNumberEmpty">Wpisz poprawny numer kompanii</string>
    <string name="title_registration_platoonNumberEmpty">Wpisz poprawny numer plutonu</string>
    <string name="title_registration_passwordEmpty">Wpisz hasło</string>
    <string name="title_registration_repeatPasswordEmpty">Wpisz powtórnie hasło</string>
    <string name="title_registration_password_length_error">Hasło musi być dłuższe niż 3 znaki</string>
    <string name="title_registration_passwordsNotEqual">Hasła nie są identyczne</string>
    <string name="title_login">Logowanie</string>
    <string name="title_login_no_account">Nie posiadasz konta?</string>
    <string name="title_login_register">Zarejestruj</string>
    <string name="title_login_button">Zaloguj</string>
    <string name="title_login_login">Login</string>
    <string name="title_login_password">Hasło</string>
    <string name="title_login_loginEmpty">Wpisz login</string>
    <string name="title_login_passwordEmpty">Wpisz hasło</string>
    <string name="title_login_title_alert_dialog">Logowanie</string>
    <string name="title_login_failed">Niepoprawne dane logowania</string>
    <string name="title_login_message_alert_dialog">Twój login to: </string>
    <string name="title_login_message_info_alert_dialog">Możesz się teraz zalogować używając loginu i hasła podanych przy rejestracji</string>
    <string name="title_login_positive_button_alert_dialog">OK</string>
    <string name="title_status_code_400">Błąd po stronie klienta. Niepoprawne dane</string>
    <string name="title_status_code_408">Upłynął limit czasu żądania</string>
    <string name="title_status_code_client_error">Wystąpił błąd po stronie klienta. Spróbuj ponownie</string>
    <string name="title_status_code_server_error">Wystąpił błąd po stronie serwera. Spróbuj ponownie</string>
    <string name="title_status_code_error_occurred">Wystąpił nieoczekiwany błąd. Spróbuj ponownie</string>
    <string name="title_user_has_no_company_info">Nie należysz do żadnej kompanii. Wciśnij przycisk, aby dołączyć</string>
    <string name="title_join_company_label">Dołączanie do kompanii</string>
    <string name="title_join_company_join_button">Dołącz</string>
    <string name="title_join_company_company_null">Nie znaleziono żadnej dostępnej kompanii. Spróbuj ponownie wciskając przycisk poniżej</string>
    <string name="title_join_company_sent_request">Oczekiwanie na akceptację przez dowódcę kompanii. Wysłano prośbę o dołączenie do </string>
    <string name="title_join_platoon_label">Dołączanie do plutonu</string>
    <string name="title_join_platoon_name_label">Pluton</string>
    <string name="title_join_platoon_join_button">Dołącz</string>
    <string name="title_join_platoon_company_null">Nie znaleziono żadnego dostępnego plutonu. Spróbuj ponownie wciskając przycisk poniżej</string>
    <string name="title_join_platoon_sent_request">Oczekiwanie na akceptację przez dowódcę plutonu. Wysłano prośbę o dołączenie do </string>
    <string name="default_notification_channel_id">1</string>
    <string name="default_notification_channel_name">Kanał powiadomień dla aplikacji Kompania</string>
    <string name="title_messages_title">Wpisz tytuł wiadomości</string>
    <string name="title_messages_body">Wpisz treść wiadomości</string>
    <string name="title_messages_send_message">Wyślij wiadomość</string>
    <string name="title_messages_info">Wyślij wiadomość do żołnierzy z </string>
    <string name="title_messages_send_success">Wysłano poprawnie wiadomość</string>
    <string name="title_account">Konto</string>
    <string name="title_account_join_company">Dołącz do kompanii</string>
    <string name="title_account_join_platoon">Dołącz do plutonu</string>
    <string name="title_account_join_platoon_assistant">Zostań pomocnikiem dowódcy plutonu</string>
    <string name="title_account_logout">Wyloguj</string>
    <string name="title_folders_folder_name">Nazwa folderu</string>
    <string name="title_folders_folder_date">20/09/2019 13:14:50</string>
    <string name="title_folders_folder_root_name">Folder</string>
    <string name="title_dialog_create">Utwórz</string>
    <string name="title_dialog_create_create_new_folder">Folder</string>
    <string name="title_dialog_create_upload_file">Prześlij</string>
    <string name="title_dialog_create_new_folder_title">Nowy folder</string>
    <string name="title_dialog_create_new_folder_success_message">Utworzono poprawnie nowy folder</string>
    <string name="title_dialog_create_new_folder_name">Folder bez nazwy</string>
    <string name="title_dialog_create_new_folder_create">Utwórz</string>
    <string name="title_dialog_create_new_folder_cancel">Anuluj</string>
    <string name="title_dialog_create_new_folder_success">Utworzono folder</string>
    <string name="title_dialog_upload_start_message">Rozpoczęto przesyłanie pliku</string>
    <string name="title_dialog_upload_success_message">Przesłano poprawnie plik</string>
    <string name="title_dialog_delete">Usuń element</string>
    <string name="title_dialog_delete_delete">Usuń</string>
    <string name="title_dialog_delete_success">Usuniętego element</string>

</resources>
